1.Fixed no items message issue in PD shopping cart 2.Fixed warning error message for number type input validation 3. Removed the small closed button for installment detail pop 4. Removed the test code in function file for renew process 5. Fixed issue sticky z-index for place your order button does not work for some stage

--- a/web/sites/all/themes/evolve/lessc/Dashboard.less
+++ b/web/sites/all/themes/evolve/lessc/Dashboard.less
@@ -4022,6 +4022,7 @@ input[type="email"], .email-field{
     .Membpaymentsiderbar{
         &.sticky{
             position: fixed;
+            z-index: 99;
             &.float_bottom{
                 position: absolute;
                 right: 0;
