--- a/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
+++ b/web/sites/all/themes/evolve/lessc/PD/PDshopping.less
@@ -535,11 +535,11 @@ fieldset {
 
 /*------------- NO ITEMS IN CART -----------------*/
 #node-250{
-  .bottom-buttons{
+  .no-item-button{
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
     padding-left: 0;
     margin-top: 50px;
